--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Tue Jan 17 18:27:09 CET 2012
+#Wed Feb 29 10:38:10 CET 2012
 eclipse.preferences.version=1
 encoding/DesArtDoc.py=utf-8
+encoding/DesArtSaleOrder.py=utf-8
+encoding/__init__.py=utf-8
